HTML: image slideshow (need to fix cropping)

--- a/style.css
+++ b/style.css
@@ -486,7 +486,8 @@ p {
 
 /* Home */
 #home {
-  padding: 80px 0px;
+  padding-top: 80px;
+  padding-bottom: 0px;
   text-align: center;
   z-index: 0;
 }
@@ -532,17 +533,40 @@ p {
   font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";
 }
 
-.home__contact {
-  font-size: var(--font-regular);
-  font-weight: var(--weight-bold);
-  margin: 24px;
-  padding: 8px 21px;
-  border: 2px solid var(--color-black);
-  border-radius: var(--size-border-radius);
+/* banner */
+#banner {
+  width: 100%;
+  text-align: center;
+  height: 800px;
+  z-index: 10;
+  margin-top: 80px;
+  margin: none;
 }
 
-.home__contact:hover {
-  background-color: var(--color-lightest-grey);
+.slideList {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-right: 0;
+  overflow: hidden;
+}
+.slideList .slideImg {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+.slideList .slideImg h2 {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 10px 30px;
+  border-radius: 25px;
+}
+.slideList .slideImg img {
+  width: 100%;
+  height: 100%;
 }
 
 /* Section Common */
@@ -558,6 +582,10 @@ p {
 }
 
 /* About */
+#about h1,
+p {
+  color: white;
+}
 .about__majors {
   display: flex;
   justify-content: space-between;
